--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
 asgiref==3.7.2
 Django==4.2.2
+django-environ==0.10.0
+Faker==18.11.1
+python-dateutil==2.8.2
+six==1.16.0
 sqlparse==0.4.4
 tzdata==2023.3
